# SerialToolbox

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  aul12-SerialToolbox.desktop  main.cpp  serialtoolbox.deb
.github/workflows/: build_deb.sh  check.yml  debian_control  deploy.yml  test.yml
Controller/: ConnectionContainer.hpp  LineBreakStateMachine.cpp  LineBreakStateMachine.hpp  SendHandler.cpp  SendHandler.hpp  SendThread.cpp  SendThread.hpp  SerialProxy.cpp  SerialProxy.hpp  UiController.cpp  UiController.hpp
Res/: ByteRepresentationWidget.glade  main.ui  ui.glade
Tests/: CMakeLists.txt  main.cpp
Tests/Controller/: LineBreakStateMachine.cpp  SerialProxy.cpp  UiController.cpp
Tests/Util/: Listener.cpp
Tests/Util/Serial/: Interface.cpp  InterfaceImpl.hpp  InterfaceMock.hpp
Util/: Listener.hpp
Util/Serial/: Interface.cpp  Interface.hpp  InterfaceImplemenation.hpp  InterfacePosix.cpp  InterfacePosix.hpp
View/: ByteRepresentationWidget.cpp  ByteRepresentationWidget.hpp  MainView.cpp  MainView.hpp  RepresentationFlowView.cpp  RepresentationFlowView.hpp
cmake/: external_dep.cmake  external_dep_template.cmake.in
